--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
     padding: 0 ; 
   }
   html{
-    background-image: url(../Images/qv47amzkask71.png);
+    background-image: url(..Images/qv47amzkask71.png);
     background-attachment: fixed;
   }
   body {
@@ -14,7 +14,7 @@
   header{
     display: flex;
     align-items: center;
-    background-image: url(../Images/qv47amzkask71.png);
+    background-image: url(..Images/qv47amzkask71.png);
   }
   header img{ 
     max-width: 250px;
@@ -49,7 +49,7 @@
   footer{
 
     padding: 2vh 0 ;
-    background-image: url(../Images/qv47amzkask71.png);
+    background-image: url(..Images/qv47amzkask71.png);
   }
 
   footer p {
